added profile pic

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1><strong>Joselyn Zuniga</h1></strong>
-<! -- Insert photo -- >
+<img src="../Joselyn_Zuniga_Portfolio/assets/images/profilepic.jpeg" alt="profile pic" width="200px"/>  
 
 
 </body>
