--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joselyn Zuniga Portfolio</title>
 </head>
-<body>
-    <h1><strong>Joselyn Zuniga</h1></strong>
-<img src="../Joselyn_Zuniga_Portfolio/assets/images/profilepic.jpeg" alt="profile pic" width="200px"/>  
 
+<body>
+
+    <head>
+      <h1><strong>Joselyn Zuniga</strong></h1>
+    <img src="../Joselyn_Zuniga_Portfolio/assets/images/profilepic.jpeg" alt="profile pic" width="200px"/>  
+</head>
+
+<h2>
+    <section>
+    <nav>
+        <ul>
+            <li><a href="http://127.0.0.1:5500/Joselyn_Zuniga_Portfolio/index.html">About Me</a></li>
+            <li><a href="http://127.0.0.1:5500/Joselyn_Zuniga_Portfolio/index.html">Projects</a></li>
+            <li><a href="http://127.0.0.1:5500/Joselyn_Zuniga_Portfolio/index.html">Contact Info</a></li>
+        </ul>
+    </nav>
+    </section>
+</h2>
 
 </body>
 </html>
