--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-
-    <head>
-      <h1><strong>Joselyn Zuniga</strong></h1>
-    <img src="../Joselyn_Zuniga_Portfolio/assets/images/profilepic.jpeg" alt="profile pic" width="200px"/>  
-</head>
+      <header class="header">
+         <h1><strong>Joselyn Zuniga</strong></h1>
+      </header>
+         <img class="Joselyn Zuniga"
+            <img src="../Joselyn_Zuniga_Portfolio/assets/images/profilepic.jpeg" alt="profile pic" width="200px"/>  
 
 <h2>
     <section>
@@ -26,5 +26,25 @@
     </section>
 </h2>
 
+<section class="content">
+    <section id="About Me" class="About Me">
+        <h3>About Me</h3>
+        <p>
+            I'm a pretty laid back person. I like to enjoy life. Very opened minded and enjoy traveling and learning new things.
+        </p>
+        <h3>Projects</h3>
+        <p>
+            <ul>
+            <li>Project 1 </li> 
+            <li>Project 2 </li>
+            <li>Project 3 </li>
+            <li>Project 4 </li>
+            </ul>
+            <h3>Contact Info</h3>
+            <li><a href="Mailto: jzuniga2095@gmail.com">Email</a></li>
+            <li><a href="https://github.com/Jzuniga92/Joselyn_Zuniga_Portfolio"</a>GitHub</li>
+            <li><a href="https://www.linkedin.com/in/joselyn-zuniga-774976251?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BTgGf7WorQnybUG0C6ZuI9w%3D%3D">LinkedIn</a></li>
+        </p>
+</section>
 </body>
 </html>
