added css stylesheet

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joselyn Zuniga Portfolio</title>
+    <link rel="stylesheet" href="../Joselyn_Zuniga_Portfolio/assets/css/style.css" />
 </head>
 
 <body>
@@ -12,7 +13,7 @@
          <h1><strong>Joselyn Zuniga</strong></h1>
       </header>
          <img class="Joselyn Zuniga"
-            <img src="../Joselyn_Zuniga_Portfolio/assets/images/profilepic.jpeg" alt="profile pic" width="200px"/>  
+            <img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_5335.jpeg" alt="profile pic" width="200px"/>  
 
 <h2>
     <section>
@@ -35,15 +36,17 @@
         <h3>Projects</h3>
         <p>
             <ul>
-            <li>Project 1 </li> 
-            <li>Project 2 </li>
-            <li>Project 3 </li>
-            <li>Project 4 </li>
+             <li>Project 1 </li> 
+             <li>Project 2 </li>
+             <li>Project 3 </li>
+             <li>Project 4 </li>
             </ul>
-            <h3>Contact Info</h3>
-            <li><a href="Mailto: jzuniga2095@gmail.com">Email</a></li>
-            <li><a href="https://github.com/Jzuniga92/Joselyn_Zuniga_Portfolio"</a>GitHub</li>
-            <li><a href="https://www.linkedin.com/in/joselyn-zuniga-774976251?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BTgGf7WorQnybUG0C6ZuI9w%3D%3D">LinkedIn</a></li>
+        <h3>Contact Info</h3>
+            <ul>
+                <li><a href="Mailto: jzuniga2095@gmail.com">Email</a></li>
+                <li><a href="https://github.com/Jzuniga92/Joselyn_Zuniga_Portfolio"</a>GitHub</li>
+                <li><a href="https://www.linkedin.com/in/joselyn-zuniga-774976251?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BTgGf7WorQnybUG0C6ZuI9w%3D%3D">LinkedIn</a></li>
+            </ul>
         </p>
 </section>
 </body>
