updated css style sheet

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
       <header class="header">
          <h1><strong>Joselyn Zuniga</strong></h1>
       </header>
-         <img class="Joselyn Zuniga"
-            <img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_5335.jpeg" alt="profile pic" width="200px"/>  
-
+      <section>
+         <img class="profile-photo"
+            <img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_5335.jpeg" alt="profile pic" width="200px" class="center"/>  
+    </section>
 <h2>
-    <section>
+
     <nav>
         <ul>
             <li><a href="http://127.0.0.1:5500/Joselyn_Zuniga_Portfolio/index.html">About Me</a></li>
@@ -24,7 +25,7 @@
             <li><a href="http://127.0.0.1:5500/Joselyn_Zuniga_Portfolio/index.html">Contact Info</a></li>
         </ul>
     </nav>
-    </section>
+    
 </h2>
 
 <section class="content">
