--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@
             <img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_5335.jpeg" alt="profile pic" width="200px" class="center"/>  
     </section>
 <h2>
-
     <nav>
-        <ul>
+        <ul class="links">
             <li><a href="http://127.0.0.1:5500/Joselyn_Zuniga_Portfolio/index.html">About Me</a></li>
             <li><a href="http://127.0.0.1:5500/Joselyn_Zuniga_Portfolio/index.html">Projects</a></li>
             <li><a href="http://127.0.0.1:5500/Joselyn_Zuniga_Portfolio/index.html">Contact Info</a></li>
         </ul>
-    </nav>
-    
+    </nav>   
 </h2>
 
 <section class="content">
