--- a/index.html
+++ b/index.html
@@ -9,44 +9,47 @@
 </head>
 
 <body>
-      <header class="header">
-         <h1><strong>Joselyn Zuniga</strong></h1>
-      </header>
-      <section>
-         <img class="profile-photo"
-            <img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_5335.jpeg" alt="profile pic" width="200px" class="center"/>  
+    <head>
+        <h1>Joselyn Zuniga</h1>
+    </head>
+    <section>
+        <img class="profile-photo">
+        <img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_5335.jpeg" alt="profile profile-photo" width="200px" class="center">
     </section>
-<h2>
+    <id class="links">
     <nav>
-        <ul class="links">
-            <li><a href="http://127.0.0.1:5500/Joselyn_Zuniga_Portfolio/index.html">About Me</a></li>
-            <li><a href="http://127.0.0.1:5500/Joselyn_Zuniga_Portfolio/index.html">Projects</a></li>
-            <li><a href="http://127.0.0.1:5500/Joselyn_Zuniga_Portfolio/index.html">Contact Info</a></li>
-        </ul>
-    </nav>   
-</h2>
+      <ul>
+          <li><a href="#about-me">About Me</a></li>
+          <li><a href="#Projects">Projects</a></li>
+          <li><a href="#Contact-info">Contact Info</a></li>
+      </ul>
+  </nav>   
 
-<section class="content">
-    <section id="About Me" class="About Me">
-        <h3>About Me</h3>
+  <section class="content">
+    <section id="about-me" class="about-me">
+        <h2>ABOUT ME</h2>
         <p>
-            I'm a pretty laid back person. I like to enjoy life. Very opened minded and enjoy traveling and learning new things.
+            <---My About Me Goes Here --->
         </p>
-        <h3>Projects</h3>
+    </section>
+    <section id="Projects" class="Projects">
+        <h2><center>PROJECTS</center></h2>
         <p>
-            <ul>
-             <li>Project 1 </li> 
-             <li>Project 2 </li>
-             <li>Project 3 </li>
-             <li>Project 4 </li>
-            </ul>
-        <h3>Contact Info</h3>
-            <ul>
-                <li><a href="Mailto: jzuniga2095@gmail.com">Email</a></li>
-                <li><a href="https://github.com/Jzuniga92/Joselyn_Zuniga_Portfolio"</a>GitHub</li>
-                <li><a href="https://www.linkedin.com/in/joselyn-zuniga-774976251?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BTgGf7WorQnybUG0C6ZuI9w%3D%3D">LinkedIn</a></li>
-            </ul>
+            <---My Projects Go Here --->
         </p>
-</section>
+    </section>
+    <section id="Contact-info" class="Contact-info">
+        <h2>CONTACT INFO</h2>
+        <p>
+            <---My Contact Info Goes Here --->
+        </p>
+    </section>
+
+
+
+    
+
+
+  </section>
+
 </body>
-</html>
