updated style sheet and index.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="../Joselyn_Zuniga_Portfolio/assets/css/style.css" />
 </head>
 
+
 <body>
     <head>
-        <h1>Joselyn Zuniga</h1>
+        <h1><center>Joselyn Zuniga</center></h1>
     </head>
     <section>
         <img class="profile-photo">
