added images and update index html

--- a/index.html
+++ b/index.html
@@ -9,23 +9,30 @@
 </head>
 
 
-<body>
+<body> 
+    <!-- need to center my name as the header -->
+    <!-- Add a photo for background landscape-->
     <head>
         <h1><center>Joselyn Zuniga</center></h1>
     </head>
+
     <section>
-        <img class="profile-photo">
+        <!-- profile photo -->
+        <!--make sure to add alt attribute for better accessiblity-->
+        <img class="profile-photo"> 
         <img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_5335.jpeg" alt="profile profile-photo" width="200px" class="center">
     </section>
+    <!-- My links will be listed here -->
     <id class="links">
     <nav>
-      <ul>
+        <!-- links need to be a hyperlink in order to navagate to the section of the page -->
+       <ul> 
           <li><a href="#about-me">About Me</a></li>
           <li><a href="#Projects">Projects</a></li>
           <li><a href="#Contact-info">Contact Info</a></li>
       </ul>
   </nav>   
-
+        <!-- Write a short about me-->
   <section class="content">
     <section id="about-me" class="about-me">
         <h2>ABOUT ME</h2>
@@ -33,12 +40,19 @@
             <---My About Me Goes Here --->
         </p>
     </section>
-    <section id="Projects" class="Projects">
-        <h2><center>PROJECTS</center></h2>
-        <p>
-            <---My Projects Go Here --->
-        </p>
+        <!-- Don't have any projects but will add photos as mock projects and will add actual projects as the class progresses-->
+        <!-- Make images links-->
+        <h2>PROJECTS</h2>
+         <id class="projects">
+            <ul>
+               <li><a href="#HarryPotter"><img align="top" src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_6553.jpeg" alt="Harry Potter" style="width:500px;height:400px;"></a></li>
+               <li><a href="#Travel"><img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_6554.jpeg" alt="Travel" style="width:300px;height:200px;"></a></li>
+               <li><a href="#Fitness"><img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_6556.jpeg" alt="Travel" style="width:300px;height:200px;"></a></li>
+               <li><a href="#Space"><img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_6550.jpeg" alt="Space" style="width:300px;height:200px;"></a></li>
+            </ul>
+        </id>
     </section>
+        <!-- For contact info I will add my email, git hub, and linked In-->
     <section id="Contact-info" class="Contact-info">
         <h2>CONTACT INFO</h2>
         <p>
