updated style sheet

--- a/index.html
+++ b/index.html
@@ -33,38 +33,44 @@
       </ul>
   </nav>   
         <!-- Write a short about me-->
-  <section class="content">
+<section class="content">
     <section id="about-me" class="about-me">
         <h2>ABOUT ME</h2>
         <p>
             <---My About Me Goes Here --->
         </p>
     </section>
+</section>
         <!-- Don't have any projects but will add photos as mock projects and will add actual projects as the class progresses-->
         <!-- Make images links-->
         <h2>PROJECTS</h2>
-         <id class="projects">
+         <div class="projects-container">
+            <section class="projects-links">
             <ul>
-               <li><a href="#HarryPotter"><img align="top" src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_6553.jpeg" alt="Harry Potter" style="width:500px;height:400px;"></a></li>
-               <li><a href="#Travel"><img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_6554.jpeg" alt="Travel" style="width:300px;height:200px;"></a></li>
-               <li><a href="#Fitness"><img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_6556.jpeg" alt="Travel" style="width:300px;height:200px;"></a></li>
-               <li><a href="#Space"><img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_6550.jpeg" alt="Space" style="width:300px;height:200px;"></a></li>
+               <li><a href="#HarryPotter"><img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_6553.jpeg" alt="Harry Potter"></a></li>
+               <li><a href="#Travel"><img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_6554.jpeg" alt="Travel"></a></li>
+               <li><a href="#Fitness"><img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_6556.jpeg" alt="Travel"></a></li>
+               <li><a href="#Space"><img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_6550.jpeg" alt="Space"></a></li>
             </ul>
-        </id>
-    </section>
+            </section>
+         </div>
         <!-- For contact info I will add my email, git hub, and linked In-->
     <section id="Contact-info" class="Contact-info">
         <h2>CONTACT INFO</h2>
-        <p>
-            <---My Contact Info Goes Here --->
-        </p>
-    </section>
+        <div class="contact">
+            <section class="Contact-info">
+            <ul>
+               <li><a href=" mailto: Jzuniga2095@gmail.com">Email</a></li>
+               <li><a href="https://github.com/Jzuniga92/Joselyn_Zuniga_Portfolio">GitHub</a></li>
+               <li><a href="https://www.linkedin.com/in/joselyn-zuniga-774976251?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bbi69b8pITWG%2FNOPk0XjkTw%3D%3D">LinkedIn</a></li>
+            </ul>
+            </section>
+         </div>
+    <footer class="Footer">
+        <h2>My Very First Webpage</h2>
+    </footer>
+        
 
-
-
-    
-
-
-  </section>
 
 </body>
+</html>
