--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joselyn Zuniga Portfolio</title>
-    <link rel="stylesheet" href="../Joselyn_Zuniga_Portfolio/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 
@@ -18,8 +18,9 @@
                 <!-- links need to be a hyperlink in order to navagate to the section of the page -->
                <ul> 
                   <li><a href="#about-me">About Me</a></li>
-                  <li><a href="#Projects">Projects</a></li>
-                  <li><a href="#Contact-info">Contact Info</a></li>
+                  <li><a href="#projects">Projects</a></li>
+                  <li><a href="#contact">Contact Info</a></li>
+                  
               </ul>
           </nav>   
           </id>
@@ -30,7 +31,7 @@
         <!-- profile photo -->
         <!--make sure to add alt attribute for better accessiblity-->
         <img class="profile-photo"> 
-        <img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_5335 2.jpeg" alt="profile profile-photo" width="200px" class="center">
+        <img src="./assets/images/IMG_5335 2.jpeg" alt="profile profile-photo" width="200px" class="center">
         <div><
         <div class="text">
             <h1>JOSELYN ZUNIGA</h1>
@@ -46,7 +47,7 @@
     <section id="about-me" class="about-me">
         <h2>ABOUT ME</h2>
         <p>
-            I am currently an Account Manager for ProPark Mobility. I specialize in developing innovative and essential parking operations. 
+             I am currently an Account Manager for ProPark Mobility. I specialize in developing innovative and essential parking operations. 
             I began my career as a valet attendant in 2012 in San Antonio, TX. As the industry developed, I began to grow into leadership roles.
             I consider myself an avid learner. I like to stay up to date with the industries latest innovations. I am eager to build and launch any projects or operations I encounter. 
             With my knowledge and experience I have led several hospitality and parking operations. From 4 and 5 star rated hotels to high volumed medical centers.
@@ -59,30 +60,30 @@
         <!-- Make images links-->
     
         <section class="projects">
-            <section id="projects-links" class="projects-links">
+            <section id="projects" class="projects-links">
             <h2><center>PROJECTS</center></h2>
             <ul>
-               <li><a href="#HarryPotter"><img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_6553.jpeg" alt="Harry Potter" width="700" height="400"></a></li>
-               <li><a href="#Travel"><img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_6554.jpeg" alt="Travel" width="200" height="100"></a></li>
-               <li><a href="#Fitness"><img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_6556.jpeg" alt="Travel" width="200" height="100"></a></li>
-               <li><a href="#Space"><img src="../Joselyn_Zuniga_Portfolio/assets/images/IMG_6550.jpeg" alt="Space" width="200" height="100"></a></li>
+               <li><a href="#HarryPotter"><img src="./assets/images/IMG_6553.jpeg" alt="Harry Potter" width="700" height="400"></a></li>
+               <li><a href="#Travel"><img src="./assets/images/IMG_6554.jpeg" alt="Travel" width="200" height="100"></a></li>
+               <li><a href="#Fitness"><img src="./assets/images/IMG_6556.jpeg" alt="Travel" width="200" height="100"></a></li>
+               <li><a href="#Space"><img src="./assets/images/IMG_6550.jpeg" alt="Space" width="200" height="100"></a></li>
             </ul>
              </section>
         </section>
         <!-- For contact info I will add my email, git hub, and linked In-->
         <section class="contact-info">
-            <id class="links-contact">
-                <h2><cennter>CONTACT INFO</center></h2>
+            <section id="contact">
+                <h2><center>CONTACT INFO</center></h2>
           <nav>
             <ul>
-               <li><a href="mailto:Jzuniga2095@gmail.com">Email</a></li>
+               <li><a href="mailto: Jzuniga2095@gmail.com">Email</a></li>
                <li><a href="https://github.com/Jzuniga92/Joselyn_Zuniga_Portfolio">GitHub</a></li>
                <li><a href="https://www.linkedin.com/in/joselyn-zuniga-774976251?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bbi69b8pITWG%2FNOPk0XjkTw%3D%3D">LinkedIn</a></li>
             </ul>
           </nav>
         </section>
 
-    <footer class="Footer">
+    <footer>
         <section id="footer">
         <h2>My Very First Webpage</h2>
         </section>
