updated index.html and stylesheet

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                <ul> 
                   <li><a href="#about-me">About Me</a></li>
                   <li><a href="#projects">Projects</a></li>
-                  <li><a href="#contact">Contact Info</a></li>
+                  <li><a href="#contact">Contact</a></li>
                   
               </ul>
           </nav>   
@@ -27,12 +27,11 @@
     </head>
 
     <section>
-        <
-        <!-- profile photo -->
+         <!-- profile photo -->
         <!--make sure to add alt attribute for better accessiblity-->
         <img class="profile-photo"> 
-        <img src="./assets/images/IMG_5335 2.jpeg" alt="profile profile-photo" width="200px" class="center">
-        <div><
+        <img src="./assets/images/IMG_5335 2.jpeg" alt="profile profile-photo" width="400px" height="400">
+    <div>
         <div class="text">
             <h1>JOSELYN ZUNIGA</h1>
         </div>
@@ -73,7 +72,7 @@
         <!-- For contact info I will add my email, git hub, and linked In-->
         <section class="contact-info">
             <section id="contact">
-                <h2><center>CONTACT INFO</center></h2>
+                <h2><center>CONTACT</center></h2>
           <nav>
             <ul>
                <li><a href="mailto: Jzuniga2095@gmail.com">Email</a></li>
