Updated Read Me, CSS, and HTML

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             I consider myself an avid learner. I like to stay up to date with the industries latest innovations. I am eager to build and launch any projects or operations I encounter. 
             With my knowledge and experience I have led several hospitality and parking operations. From 4 and 5 star rated hotels to high volumed medical centers.
             With implementing strategic methods, I accomplished to improve productivity, client satisfaction, team enhancements, and quality services.
-            I am looking to use my driven leadership skills, knowledge, and experience to help a company succeed in quality service and profitability. 
+            I am looking to combine my skills and knowledge to developed apps, websites, and other programs to not only enhance user experience but also client profitability. 
         </p>
     </section>
 </section>
